just a few more exercises

--- a/PRIMA LECTIE/exercises/exercise8.html
+++ b/PRIMA LECTIE/exercises/exercise8.html
@@ -19,20 +19,23 @@
     <button class="no-btn">No</button> -->
 
     <!-- 8c -->
-    <!-- <img class="logo-class" src="google-logo.png" />
-    <input
-      class="input-class"
-      type="text"
-      placeholder="Search Google or type a URL"
-    /> -->
-
+    <div class="google-page-div">
+      <img class="logo-class" src="google-logo.png" />
+      <input
+        class="input-class"
+        type="text"
+        placeholder="Search Google or type a URL"
+      />
+      <button>asd</button>
+      <button>asd</button>
+    </div>
     <!-- 8d -->
     <!-- <input class="first-class" type="text" placeholder="First name" />
     <input class="second-class" type="text" placeholder="First name" />
     <input class="email-class" type="text" placeholder="Email" />
     <button class="button-class">Sign Up</button> -->
 
-    <p class="paragraph-class">Request a ride now</p>
+    <!-- <p class="paragraph-class">Request a ride now</p>
     <input
       class="first-class"
       type="text"
@@ -40,6 +43,6 @@
     />
     <input class="second-class" type="text" placeholder="Enter destination" />
     <button class="button-class1">Request now</button>
-    <button class="button-class2">Schedule for later</button>
+    <button class="button-class2">Schedule for later</button> -->
   </body>
 </html>
