finishing up the 9th part of the exercises

--- a/PRIMA LECTIE/exercises/exercise8.html
+++ b/PRIMA LECTIE/exercises/exercise8.html
@@ -19,15 +19,21 @@
     <button class="no-btn">No</button> -->
 
     <!-- 8c -->
-    <div class="google-page-div">
+    <div>
       <img class="logo-class" src="google-logo.png" />
+    </div>
+
+    <div>
       <input
         class="input-class"
         type="text"
         placeholder="Search Google or type a URL"
       />
-      <button>asd</button>
-      <button>asd</button>
+    </div>
+
+    <div>
+      <button class="button-class1">Google Search</button>
+      <button class="button-class2">I'm Feeling Lucky</button>
     </div>
     <!-- 8d -->
     <!-- <input class="first-class" type="text" placeholder="First name" />
