--- a/PRIMA LECTIE/exercises/exercitul10.html
+++ b/PRIMA LECTIE/exercises/exercitul10.html
@@ -6,12 +6,16 @@
   <body>
     <div class="box-class">
       <div class="profile-picture">
-        <img class="image-class" src="mister.jpg" alt="" />
+        <img class="image-class" src="images-for exercises/mister.jpg" alt="" />
         <p class="name-class">Mohamed Salah</p>
       </div>
 
       <div class="mutual-friend-div">
-        <img class="mutual-friend-img" src="mister3.webp" alt="" />
+        <img
+          class="mutual-friend-img"
+          src="images-for exercises/mister3.webp"
+          alt=""
+        />
         <p class="paragraph-class">2 mutual friends</p>
       </div>
 
@@ -20,12 +24,20 @@
 
     <div class="box-class">
       <div class="profile-picture">
-        <img class="image-class" src="mister2.png" alt="" />
+        <img
+          class="image-class"
+          src="images-for exercises/mister2.png"
+          alt=""
+        />
         <p class="name-class">Kevin De Bruyne</p>
       </div>
 
       <div class="mutual-friend-div">
-        <img class="mutual-friend-img" src="mister3.webp" alt="" />
+        <img
+          class="mutual-friend-img"
+          src="images-for exercises/mister3.webp"
+          alt=""
+        />
         <p class="paragraph-class">2 mutual friends</p>
       </div>
 
@@ -34,12 +46,20 @@
 
     <div class="box-class">
       <div class="profile-picture">
-        <img class="image-class" src="mister3.png" alt="" />
+        <img
+          class="image-class"
+          src="images-for exercises/mister3.png"
+          alt=""
+        />
         <p class="name-class">Bukayo Saka</p>
       </div>
 
       <div class="mutual-friend-div">
-        <img class="mutual-friend-img" src="mister3.webp" alt="" />
+        <img
+          class="mutual-friend-img"
+          src="images-for exercises/mister3.webp"
+          alt=""
+        />
         <p class="paragraph-class">2 mutual friends</p>
       </div>
       <button class="button-class">Add Friend</button>
