--- a/PRIMA LECTIE/project/youtube.html
+++ b/PRIMA LECTIE/project/youtube.html
@@ -7,63 +7,20 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="styles/general.css" />
+    <link rel="stylesheet" href="styles/header.css" />
+    <link rel="stylesheet" href="styles/video.css" />
     <title>YouTube.com Clone</title>
-    <style>
-      p {
-        font-family: Roboto, Arial;
-        margin-top: 0;
-        margin-bottom: 0;
-      }
-
-      .thumbnail {
-        width: 100%;
-      }
-
-      .video-title {
-        font-size: 14px;
-        font-weight: 500;
-        margin-top: 0;
-        line-height: 20px;
-        margin-bottom: 12px;
-      }
-
-      .search-bar {
-        font-size: 20px;
-        margin-left: 12px;
-        display: block;
-      }
-
-      .profile-picture {
-        width: 40px;
-        border-radius: 50px;
-      }
-
-      .thumbnail-row {
-        margin-bottom: 12px;
-      }
-
-      .video-author,
-      .video-stats {
-        font-size: 12px;
-        color: rgb(96, 96, 96);
-      }
-      .video-author {
-        margin-bottom: 4px;
-      }
-      .video-info-grid {
-        display: grid;
-        grid-template-columns: 50px 1fr;
-      }
-      .video-grid {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        column-gap: 16px;
-        row-gap: 40px;
-      }
-    </style>
   </head>
   <body>
-    <input class="search-bar" type="text" placeholder="Search" />
+    <div class="header">
+      <div class="left-section">left section</div>
+      <div class="middle-section">
+        <input class="search-bar" type="text" placeholder="Search" />
+      </div>
+      <div class="right-section">right section</div>
+    </div>
+
     <div class="video-grid">
       <div class="video-preview">
         <div class="thumbnail-row">
