completed nested flexbox exercises

--- a/PRIMA LECTIE/exercises/exercitiul13.html
+++ b/PRIMA LECTIE/exercises/exercitiul13.html
@@ -27,9 +27,10 @@
         </div>
       </div>
     </div> -->
-    <div class="first-container">
+    <!--  -->
+    <!-- <div class="first-container">
       <div
-        style="color: rgb(120, 120, 120); margin-bottom: 8px"
+        style="color: rgb(120, 120, 120); margin-bottom: 25px"
         class="first-paragraph"
       >
         ALL INBOXES
@@ -48,6 +49,77 @@
           </div>
           <div style="color: rgb(120, 120, 120)">
             Hey there! We're writing to tell you about our...
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="sender-picture-container">
+          <img
+            class="img-class"
+            src="images-for exercises/mister2.png"
+            alt=""
+          />
+        </div>
+        <div class="content">
+          <div class="div-with-time">
+            <div style="font-weight: bold; font-size: 18px">Best Buy</div>
+            <div style="color: rgb(120, 120, 120)">12:32 PM</div>
+          </div>
+          <div style="font-weight: bold; margin-bottom: 5px">
+            Your Best Buy eReceipt
+          </div>
+          <div style="color: rgb(120, 120, 120)">
+            Thank you for shopping at Best Buy, here is...
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="sender-picture-container">
+          <img
+            class="img-class"
+            src="images-for exercises/mister3.png"
+            alt=""
+          />
+        </div>
+        <div class="content">
+          <div class="div-with-time">
+            <div style="font-weight: bold">Netflix</div>
+            <div style="color: rgb(120, 120, 120)">9:00 AM</div>
+          </div>
+          <div style="font-weight: bold; margin-bottom: 5px">
+            Here's what's coming soon to Netflix
+          </div>
+          <div style="color: rgb(120, 120, 120)">
+            Brand new movies and shows, old favourites...
+          </div>
+        </div>
+      </div>
+    </div> -->
+    <!--  -->
+    <div class="tweet">
+      <div class="profile-picture-column">
+        <img class="img-class" src="images-for exercises/mister.jpg" alt="" />
+      </div>
+
+      <div class="tweet-column">
+        <div class="tweet-header">
+          <div class="tweet-author">supersimple.dev</div>
+          <div class="tweet-author-handle">@SuperSimpleDev</div>
+        </div>
+
+        <div class="tweet-content">
+          What is backend web development? A complete overview. New video is up!
+        </div>
+
+        <div class="video-preview">
+          <div class="thumbnail-column"></div>
+          <div class="video-info-column">
+            <div class="video-website">youtube.com</div>
+            <div class="video-title">
+              Backend web development - a complete overview (2021)
+            </div>
           </div>
         </div>
       </div>
