--- a/PRIMA LECTIE/exercises/exercitiul13.html
+++ b/PRIMA LECTIE/exercises/exercitiul13.html
@@ -99,27 +99,25 @@
     </div> -->
     <!--  -->
     <div class="tweet">
-      <div class="profile-picture-column">
+      <div class="image-div">
         <img class="img-class" src="images-for exercises/mister.jpg" alt="" />
       </div>
 
-      <div class="tweet-column">
+      <div class="content">
         <div class="tweet-header">
-          <div class="tweet-author">supersimple.dev</div>
-          <div class="tweet-author-handle">@SuperSimpleDev</div>
+          <div class="name-class">supersimple.dev</div>
+          <div class="tag-class">@SuperSimpleDev</div>
         </div>
 
-        <div class="tweet-content">
+        <div class="paragraph-class">
           What is backend web development? A complete overview. New video is up!
         </div>
 
         <div class="video-preview">
-          <div class="thumbnail-column"></div>
-          <div class="video-info-column">
-            <div class="video-website">youtube.com</div>
-            <div class="video-title">
-              Backend web development - a complete overview (2021)
-            </div>
+          <div class="thumbnail-section"></div>
+          <div class="video-title">
+            <div class="tag-class">youtube.com</div>
+            <div>Backend web development - a complete overview. (2021)</div>
           </div>
         </div>
       </div>
