--- a/PRIMA LECTIE/project/youtube.html
+++ b/PRIMA LECTIE/project/youtube.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/general.css" />
     <link rel="stylesheet" href="styles/header.css" />
     <link rel="stylesheet" href="styles/video.css" />
+    <link rel="stylesheet" href="styles/sidebar.css" />
     <title>YouTube.com Clone</title>
   </head>
   <body>
@@ -42,6 +43,8 @@
         />
       </div>
     </div>
+
+    <div class="sidebar">sidebar</div>
 
     <div class="video-grid">
       <div class="video-preview">
